# roughly-good-enough-lsp

./: .gitignore  .vscodeignore  Cargo.toml  README.md  flake.nix  justfile  package-lock.json  package.json  rustfmt.toml
client/: package-lock.json  package.json
client/src/: extension.ts
examples/: foo.rs
scripts/: get_node_types.py
server/: package-lock.json  package.json
server/src/: server.ts
src/: cli.rs  config.rs  dev.rs  diagnostics.rs  format.rs  index.rs  lib.rs  lsp.rs  main.rs  tree.rs  utils.rs
src/snapshots/: roughly__format__test__binary_operator-2.snap  roughly__format__test__binary_operator-3.snap  roughly__format__test__binary_operator-4.snap  roughly__format__test__binary_operator-5.snap  roughly__format__test__binary_operator-6.snap  roughly__format__test__binary_operator-7.snap  roughly__format__test__binary_operator.snap  roughly__format__test__braced_expression-2.snap  roughly__format__test__braced_expression-3.snap  roughly__format__test__braced_expression-4.snap  roughly__format__test__braced_expression-5.snap  roughly__format__test__braced_expression-5.snap.new  roughly__format__test__braced_expression-6.snap  roughly__format__test__braced_expression-6.snap.new  roughly__format__test__braced_expression-7.snap  roughly__format__test__braced_expression-7.snap.new  roughly__format__test__braced_expression-8.snap  roughly__format__test__braced_expression-9.snap  roughly__format__test__braced_expression.snap  roughly__format__test__call-2.snap  roughly__format__test__call-3.snap  roughly__format__test__call-3.snap.new  (+66 more)
