[package]
name = "roughly"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15.10"
dashmap = "6.1.0"
env_logger = "0.11.6"
ignore = "0.4.23"
indoc = "2.0.5"
log = "0.4.25"
regex = "1.11.1"
ropey = "1"
similar = { version = "2.7.0", features = ["inline"] }
thiserror = "2.0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"
tree-sitter = "0.25.1"
tree-sitter-r = "1.1.0"

[dev-dependencies]
insta = "1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
tree-sitter.opt-level = 3
tree-sitter-r.opt-level = 3
